# research

./: .gitignore  2D-ROPE.py  GQA.py  MHA.py  MLA.py  MOE.py  Normlization.py
mini-sglang/: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
mini-sglang/benchmark/offline/: bench.py  bench_wildchat.py
mini-sglang/benchmark/online/: bench_qwen.py  bench_simple.py
mini-sglang/docs/: features.md  structures.md
mini-sglang/python/minisgl/: core.py  env.py
mini-sglang/python/minisgl/attention/: __init__.py  fa.py  fi.py  trtllm.py
mini-sglang/python/minisgl/benchmark/: client.py  perf.py
mini-sglang/python/minisgl/distributed/: impl.py
mini-sglang/python/minisgl/engine/: __init__.py  engine.py  graph.py  sample.py
mini-sglang/python/minisgl/kernel/: __init__.py  __main__.py  index.py  moe_impl.py  pynccl.py  radix.py  store.py  tensor.py  utils.py
mini-sglang/python/minisgl/kvcache/: __init__.py  base.py  mha_pool.py  naive_cache.py  radix_cache.py
mini-sglang/python/minisgl/layers/: __init__.py  activation.py  attention.py  base.py  embedding.py  linear.py  norm.py  rotary.py
mini-sglang/python/minisgl/message/: backend.py  tokenizer.py
mini-sglang/python/minisgl/models/: __init__.py  base.py  config.py  llama.py  mistral.py  qwen2.py  qwen3.py  qwen3_moe.py  register.py  utils.py  weight.py
mini-sglang/python/minisgl/moe/: __init__.py  base.py  fused.py
mini-sglang/python/minisgl/scheduler/: __init__.py  cache.py  config.py  decode.py  io.py  prefill.py  scheduler.py  table.py  utils.py
mini-sglang/python/minisgl/server/: api_server.py  args.py  launch.py
mini-sglang/python/minisgl/tokenizer/: detokenize.py  server.py  tokenize.py
mini-sglang/python/minisgl/utils/: __init__.py  arch.py  hf.py  logger.py  misc.py  registry.py
mini-sglang/tests/core/: test_cache_allocate.py  test_scheduler.py
mini-sglang/tests/kernel/: test_comm.py  test_index.py  test_store.py  test_tensor.py
mini-sglang/tests/misc/: test_serialize.py
nanoRLHF_ray/: README.md  pyproject.toml
nanoRLHF_ray/configs/: train_rl.yaml  train_sft.yaml
nanoRLHF_ray/examples/: kernels.py  nanoray.py  nanosets.py  nanotron.py  nanovllm.py
nanoRLHF_ray/examples/data/: gsm8k.jsonl  gsm8k.nano  gsm8k_len.json  gsm8k_len.jsonl
nanoRLHF_ray/nanorlhf/: __init__.py
nanoRLHF_ray/nanorlhf/eval/: math_eval.py  utils.py
nanoRLHF_ray/nanorlhf/kernels/: __init__.py  api.py  patch.py
nanoRLHF_ray/nanorlhf/kernels/flash_attn/: bwd.py  fwd.py  ops.py
nanoRLHF_ray/nanorlhf/kernels/flash_attn_decode/: ops.py  reduce_k.py  split_k.py
nanoRLHF_ray/nanorlhf/kernels/flash_attn_varlen/: bwd.py  fwd.py  ops.py
nanoRLHF_ray/nanorlhf/kernels/kvcache/: load.py  store.py
nanoRLHF_ray/nanorlhf/kernels/rmsnorm/: bwd.py  fwd.py  ops.py
nanoRLHF_ray/nanorlhf/nanoray/: __init__.py  utils.py
nanoRLHF_ray/nanorlhf/nanosets/: __init__.py  api.py  utils.py
nanoRLHF_ray/nanorlhf/nanotron/: __init__.py  api.py
nanoRLHF_ray/nanorlhf/nanovllm/: __init__.py  api.py
nanoRLHF_ray/scripts/: evaluate_ref_model.sh  evaluate_rl_model.sh  evaluate_sft_model.sh  merge_rl_model.sh  merge_sft_model.sh  prepare_rl_dataset.sh  prepare_sft_dataset.sh  train_rl.sh  train_sft.sh
nanoRLHF_ray/tests/kernels/: flash_attn_bwd_mask_test.py  flash_attn_decode_test.py  flash_attn_fwd_mask_test.py  flash_attn_huggingface_test.py  flash_attn_test.py  flash_attn_varlen_huggingface_test.py  flash_attn_varlen_test.py
nanoRLHF_ray/tests/nanoray/: async_test.py  blocking_test.py  pg_test.py  tp_test.py
nanoRLHF_ray/tests/nanosets/: api_test.py  array_test.py  bench_test.py  ipc_test.py  json_test.py
nanoRLHF_ray/tests/nanotron/: ckpt.py  ckpt.sh  plot.py  train.py  train.sh
nanoRLHF_ray/tests/nanoverl/: test_math_rollout.py  test_packed_pp_loss.py
nanoRLHF_ray/tests/nanovllm/: test_llm_engine.py  test_llm_engine_with_dp.py  test_llm_engine_with_dp_tp.py  test_llm_engine_with_tp.py
(+175 files in other folders)
